# lisp-rlm

./: -  .gitignore  BOOTSTRAP.md  CHANGELOG.md  Cargo.toml  GAPS.md  OUTLAYER_INTEGRATION.md  PLAN.md  PLAN_CPS.md  README.md  RUNTIME_GRAPH.md  TREEWALKER_REMOVAL.md  add_fast_path.py  agent.lisp  bench.mjs  bench_emitted.mjs  bench_emitted_full.mjs  bench_vs_js.mjs  deploy-burrow.json  fix_fast_path.py  fuzz_json.py  gen_json2.py  hello.lisp  hello.wasm  http-provider.wasm  main.lisp  near.json  outlayer  outlayer-p2  p2_wasi_http.wasm  rlm.scm  rlm_runtime.lisp  runtime.dot  rust_weather.wasm  strategies.lisp  test.mjs  test_fp64.lisp  test_fp64.wasm  test_full.mjs  test_http.lisp  (+12 more)
bench/: compare.scm
clojure-rlm/: Cargo.toml
crates/browser-compiler/: Cargo.toml  test.html
crates/browser-compiler/src/: lib.rs
crates/browser-compiler/web-app/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.worker.json  vite.config.ts  wrangler.toml
crates/browser-compiler/web-app/public/: _headers
crates/browser-compiler/web-app/src/: App.svelte  app.css
crates/browser-compiler/web-app/src/.grp/: plan.json
crates/browser-compiler/web-app/src/lib/: compiler.ts  examples.ts  http-worker.ts  near-worker.ts  runWasiWithWorker.ts  test-runner.ts  wallet.ts  wasi-worker.ts  wasm-worker.ts
crates/lisp-vm/: Cargo.toml
crates/lisp-vm/src/: bytecode.rs  lib.rs  program.rs
crates/lisp-vm/src/eval/: crypto.rs  dispatch_arithmetic.rs  dispatch_collections.rs  dispatch_http.rs  dispatch_json.rs  dispatch_predicates.rs  dispatch_state.rs  dispatch_strings.rs  dispatch_types.rs  helpers.rs  llm_wasm_stub.rs  mod.rs  quasiquote.rs
crates/lisp-vm/src/typing/: checker.rs  mod.rs  probe.rs  types.rs
examples/: README.md  clmm.lisp  clmm_u128.lisp  factory.lisp  google_oauth.lisp  google_oauth_wasm.lisp  multi_token_prices.lisp  orderbook.lisp  test_gas.rs  wallet-p256.lisp  wallet.lisp  wallet_auth.lisp  wallet_cex.lisp
fstar/: P2Memory.fst  README.md
http-adapter/: Cargo.toml
minimal-http/: Cargo.toml
outlayer-wit/: outlayer-world.wit
runtime/: harness-p2-basic.lisp  harness-p2-minimal.lisp  harness-p2.json.bak  harness-p2.lisp  harness.lisp  multi-phase-agent.lisp  standing-intent.json  standing-intent.lisp  test-search.json  test-search.lisp
scripts/: verify_memory.py  wat_check.py
src/: bytecode.rs  clojure.rs  eval.rs  gas_estimate.rs  helpers.rs  json_helpers.rs  lib.rs  mod.rs  near_validate.rs  outlayer_adapter.rs  p2_component.rs  p2_direct.rs  p2_native.rs  p2_wasi_bridge.rs  parser.rs  program.rs  runtime.rs  tagged_value.rs  types.rs  verifier.rs  wasi_emit.rs  wasi_http.rs  wasi_http_buffer.rs  wasi_p2_echo.rs  wasi_p2_native.rs  wasm_emit.rs  wit_embed.rs
tests/: all.lisp  all_syntax.lisp  borsh_harness.rs  core_language.rs  cross_feature_tests.py  deftype_tests.rs  feature_pair_tests.py  fstar_integration.rs  full_syntax.lisp  fuzz_test.rs  fuzzer_test.rs  gas_regression.rs  json_simple.lisp  json_test.lisp  json_wasm.lisp  norvig_tests.rs  pure_wat_test.rs  r7rs-conformance.lisp  r7rs_report.py  r7rs_test_adapter.py  test_borsh_roundtrip.proptest-regressions  test_borsh_roundtrip.rs  test_budget.rs  test_bytecode_coverage.rs  test_bytecode_shadow.rs  test_closure_mutation.rs  test_compiler_bugs.rs  test_compiler_extensions.rs  test_compiler_v2.rs  test_compiler_v3.rs  test_compose.rs  test_deep.rs  test_differential_fuzz.rs  test_edge.rs  test_enum_borsh.rs  test_enum_deser.rs  test_fast_path.rs  test_fb_compile.rs  test_fused_hof.rs  test_harness.rs  (+49 more)
tests_p2/: STDIN_BUG.md  burrow-mini.json  burrow-mini.lisp  burrow_args.txt  burrow_debug.lisp  burrow_final.lisp  burrow_positions.json  burrow_positions.lisp  burrow_positions_v3.lisp  burrow_positions_v4.lisp  burrow_positions_v5.lisp  burrow_positions_v6.lisp  burrow_positions_v7.lisp  burrow_positions_v7_testnet.lisp  burrow_testnet.lisp  burrow_tracker.lisp  burrow_tracker_v2.lisp  burrow_tracker_v3.lisp  burrow_tracker_v4.lisp  burrow_tracker_v5.lisp  burrow_tracker_v6.lisp  burrow_tracker_v7.lisp  burrow_tracker_v8.lisp  burrow_v2.lisp  debug_u128.lisp  echo_input.lisp  inlayer.config  kampouse_args.txt  last_results.txt  near_backup.json  near_debug.json  near_test.json  near_v5.json  outlayer.json  outlayer_positions.json  outlayer_test.json  run_suite.sh  simple_load.lisp  simple_stdin.lisp  simple_store.lisp  (+330 more)
tests_u128_p2/: test.lisp  test_tostr_big.lisp
verification/: .Makefile.deps  .fst_files.txt  FSTAR_MEMORY_MODEL.md  FSTAR_VS_RUST_DIFF.md  Makefile  Makefile.fstar  Makefile.verify  README.md  build.mk  verify.sh  verify_all.sh
weather-rust/: Cargo.toml
wit-native/: world.wit
(+313 files in other folders)
