[workspace]
members = [".", "clojure-rlm", "crates/lisp-core", "crates/lisp-wasm"]

[package]
name = "lisp-rlm-wasm"
version = "0.1.0"
edition = "2021"
description = "Lisp runtime compiled to WASM"
autobins = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3"
im = "15"
sha2 = "0.10"
sha3 = "0.10"
wat = "1.0"
wasm-encoder = "0.248.0"
lisp-wasm = { path = "crates/lisp-wasm" }
wasmparser = { version = "0.228.0", features = ["simd"] }
wasmprinter = "0.248.0"
finite-wasm = "0.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmtime = { version = "44.0.1", features = ["cranelift"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
rustyline = "14"
libc = "0.2"

[dev-dependencies]
tempfile = "3.27.0"
wat = "1.0"

[[bin]]
name = "lisp-run"
path = "src/bin/lisp_run.rs"

[[bin]]
name = "near-compile"
path = "src/bin/near_compile.rs"
