[workspace]
members = [".", "clojure-rlm", "crates/browser-compiler"]

[package]
name = "lisp-rlm-wasm"
version = "0.1.0"
edition = "2021"
description = "Lisp runtime compiled to WASM"
autobins = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-component = "0.248.0"
wit-parser = "0.248.0"
base64 = "0.22"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3"
im = "15"
sha2 = "0.10"
sha3 = "0.10"
wat = "1.0"
wasm-encoder = "0.248.0"
wasmparser = { version = "0.228.0", features = ["simd"] }
wasmprinter = "0.248.0"
finite-wasm = "0.6"
bincode = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
bs58 = "0.5"
hmac = "0.12"
rand = "0.8"
rand_chacha = "0.3"
solang-parser = "0.3.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmtime = { version = "44.0.1", features = ["cranelift"] }
wasmtime-wasi = { version = "44.0.1" }
wasmtime-wasi-http = { version = "44.0.1" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
rustyline = "14"
libc = "0.2"

[dev-dependencies]
tempfile = "3.27.0"
wat = "1.0"
proptest = "1.6"

[[bin]]
name = "lisp-run"
path = "src/bin/lisp_run.rs"

[[bin]]
name = "near-compile"
path = "src/bin/near_compile.rs"

[[bin]]
name = "dump-wasm"
path = "src/bin/dump_wasm.rs"

[[bin]]
name = "near-mock"
path = "src/bin/near_mock.rs"

[[bin]]
name = "compile"
path = "src/bin/compile.rs"

[[bin]]
name = "sol-compile"
path = "src/bin/sol_compile.rs"
