[package]
name = "lisp-rlm-browser"
version = "0.1.0"
edition = "2021"
description = "Browser Lisp compiler — compiles Lisp to NEAR (P1) or WASI (P2) WASM in the browser"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wasmprinter = "0.248.0"
lisp-rlm-wasm = { path = "../.." }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
