[package]
name = "lisp-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
lisp-core = { path = "../lisp-core", features = ["full"] }
sha2 = { version = "0.10", optional = true }
sha3 = { version = "0.10", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
im = "15"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
libc = "0.2"

[features]
default = ["crypto", "http", "llm"]
crypto = ["sha2", "sha3"]
http = ["reqwest", "tokio"]
llm = ["http"]
